chore: Update message utils to implement mini message serializer.