@@ -1,12 +1,11 @@
 package pb.ajneb97.core.utils.message;
 
-import java.util.Arrays;
 import java.util.List;
 
 public class StringUtils {
 
     public static String replace(String string, final Placeholder... placeholders) {
-        return replace(string, Arrays.asList(placeholders));
+        return replace(string, List.of(placeholders));
     }
 
     public static String replace(String string, final List<Placeholder> placeholders) {
@@ -18,7 +17,7 @@ public class StringUtils {
     }
 
     public static List<String> replace(final List<String> strings, final Placeholder... placeholders) {
-        return replace(strings, Arrays.asList(placeholders));
+        return replace(strings, List.of(placeholders));
     }
 
     public static List<String> replace(final List<String> strings, final List<Placeholder> placeholders) {
